--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   $('.show').addEventListener('click', function(){
     var script = document.createElement('script');
-    script.src = 'http://127.0.0.1:8080/getNews?callback=appendHtml';
+    script.src = 'https://github.com/Haluluyo/task13-demo/getNews?callback=appendHtml';
     document.head.appendChild(script);
     document.head.removeChild(script);
   })
