--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<title>news</title>
+<style>
+  .container{
+    width: 900px;
+    margin: 0 auto;
+  }
+</style>
+</head>
 <body>
   <div class="container">
     <ul class="news">
+      <li>第11日前瞻：中国冲击4金 博尔特再战</li>
+      <li>男双力争会师决赛 </li> 
+      <li>女排将死磕巴西！</li>
     </ul>
-    <button class="show">show news</button>
+    <button class="change">换一组</button>
   </div>
-
+  
 <script>
-
-  $('.show').addEventListener('click', function(){
+  
+  $('.change').addEventListener('click', function(){
     var script = document.createElement('script');
-    script.src = 'https://github.com/Haluluyo/task13-demo/getNews?callback=appendHtml';
+    script.src = 'http://127.0.0.1/getNews?callback=appendHtml';
     document.head.appendChild(script);
     document.head.removeChild(script);
   })
-
   function appendHtml(news){
     var html = '';
     for( var i=0; i<news.length; i++){
@@ -24,9 +37,11 @@
     console.log(html);
     $('.news').innerHTML = html;
   }
- function $(id){
+  function $(id){
     return document.querySelector(id);
   }
 </script>
+
+
 
 </html>
